<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_fon">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/logo_atek"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:textAlignment="center"
                    android:text="@string/name_col_rus"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:background="@android:color/white">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/info_text"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:background="@drawable/bg_header"/>

                <TextView
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingRight="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:textAlignment="inherit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_text1"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:background="@android:color/white">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/our_adress_text"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:background="@drawable/bg_header"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="5dp">
                    <TextView
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:paddingRight="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textAlignment="inherit"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/about_text2"/>
                    <ImageView
                        android:layout_marginRight="5dp"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:src="@drawable/karta1"/>
                </LinearLayout>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/bg_header"
                android:padding="5dp"
                android:text="@string/our_contact_text"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:textColor="@android:color/black"
                    android:text="@string/about_text3"/>

            </LinearLayout>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:background="@android:color/white">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/social_text"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:background="@drawable/bg_header"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingRight="10dp">

                    <ImageView
                        android:layout_marginRight="5dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/insta"/>
                    <TextView
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:paddingRight="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textAlignment="inherit"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/insta_acc"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingRight="10dp">

                    <ImageView
                        android:layout_marginRight="5dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/face"/>
                    <TextView
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:paddingRight="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textAlignment="inherit"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/face_acc"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingRight="10dp">

                    <ImageView
                        android:layout_marginRight="5dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/vkon"/>
                    <TextView
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:paddingRight="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textAlignment="inherit"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/vkon_acc"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>